--- a/test-wse.yml
+++ b/test-wse.yml
@@ -5,6 +5,8 @@
 
   - name: Confirm that 503 Unavailable response is returned
     uri:
-      url: "http://"
-      status_code: 
+      url: "https://api.esv.org/v3/passage/text/?q=John+11:35"
+      headers:
+        - Authorization: Token 672d39cf091d3fedea9b4141bfafd47c5e074eb3
+      method: GET 
 
