--- a/test-wse.yml
+++ b/test-wse.yml
@@ -1,6 +1,7 @@
 ---
 - name: Testear web service
-  hosts: all
+  hosts: localhost
+  gather_facts: no
   tasks:
 
   - name: Confirm that 503 Unavailable response is returned
